styling bugs, dark mode

--- a/src/components/Answer/AnswerView.scss
+++ b/src/components/Answer/AnswerView.scss
@@ -38,7 +38,7 @@
       width: 26px;
       left: 4px;
       bottom: 4px;
-      background-color: white;
+      background-color: var(--bg-color);
       transition: .2s;
       border-radius: 50%;
     }
