--- a/src/components/Question/QuestionAnswer.scss
+++ b/src/components/Question/QuestionAnswer.scss
@@ -12,6 +12,7 @@ li {
     min-height: var(--input-height);
     position: absolute;
     background-color: transparent;
+    color: var(--color-text);
     appearance: none;
     font-family: inherit;
     font-size: var(--padding);
