--- a/src/components/common/InfoMessage.scss
+++ b/src/components/common/InfoMessage.scss
@@ -21,7 +21,7 @@
   text-transform: uppercase;
   span {
     margin: 0 20px;
-    color: var(--color-accent);
+    color: var(--color-accent-contrast);
     a {
       text-decoration: none;
       color: inherit;
